# umlctl

./: Cargo.toml  README.md  example.yaml
.github/workflows/: ci.yaml
src/: cli.rs  main.rs
