[package]
name = "umlctl"
version = "0.1.0"
authors = ["Takashi IIGUNI <iiguni.tks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde = "1.0"
# serde_derive = "1.0"
# serde_yaml = "0.8"
clap = "2.33"
